[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theming/Stylish.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Empty.tscn" type="PackedScene" id=2]
[ext_resource path="res://Theming/StylishDark.tres" type="StyleBox" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.733333, 0.678431, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.294118, 0.317647, 0.364706, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.243137, 0.270588, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TabContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/tab_fg = SubResource( 1 )
custom_styles/tab_disabled = ExtResource( 1 )
custom_styles/tab_bg = SubResource( 2 )
custom_styles/panel = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_bg = Color( 1, 1, 1, 0.498039 )
custom_colors/font_color_fg = Color( 1, 1, 1, 1 )
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Empty" parent="Tabs" instance=ExtResource( 2 )]

[node name="DocumentationBrowser" type="WindowDialog" parent="."]
margin_left = 225.0
margin_top = 141.421
margin_right = 723.0
margin_bottom = 485.421
custom_colors/title_color = Color( 1, 1, 1, 1 )
window_title = "Documentation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="LineEdit" parent="DocumentationBrowser"]
margin_right = 498.0
margin_bottom = 30.0
custom_styles/normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="DocumentationBrowser"]
margin_left = 1.41425
margin_top = 35.0
margin_right = 499.414
margin_bottom = 344.0
custom_styles/bg = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Section" type="WindowDialog" parent="."]
margin_left = 278.0
margin_top = 282.0
margin_right = 776.0
margin_bottom = 500.0
custom_styles/panel = ExtResource( 1 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
window_title = "Add Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Section"]
margin_left = 16.0
margin_top = 31.7841
margin_right = 480.0
margin_bottom = 61.7841
custom_styles/normal = ExtResource( 3 )
placeholder_text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Read" type="CheckBox" parent="Section"]
margin_left = 16.0
margin_top = 69.22
margin_right = 84.0
margin_bottom = 97.22
disabled = true
pressed = true
text = "Read"

[node name="Write" type="CheckBox" parent="Section"]
margin_left = 84.0
margin_top = 69.22
margin_right = 162.0
margin_bottom = 97.22
text = "Write"

[node name="Execute" type="CheckBox" parent="Section"]
margin_left = 162.0
margin_top = 69.22
margin_right = 260.0
margin_bottom = 97.22
text = "Execute"

[node name="Exclude" type="CheckBox" parent="Section"]
margin_left = 260.0
margin_top = 69.22
margin_right = 358.0
margin_bottom = 97.22
text = "Exclude"

[node name="Ok" type="Button" parent="Section"]
margin_left = 358.0
margin_top = 68.7841
margin_right = 480.0
margin_bottom = 94.7841
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Add Section"

[node name="Label" type="Label" parent="Section"]
margin_left = 16.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 28.0
text = "Section:"

[node name="Label2" type="Label" parent="Section"]
margin_left = 16.0
margin_top = 97.22
margin_right = 96.0
margin_bottom = 117.22
text = "Function:"

[node name="FnName" type="LineEdit" parent="Section"]
margin_left = 16.0
margin_top = 134.0
margin_right = 249.0
margin_bottom = 164.0
custom_styles/normal = ExtResource( 3 )
placeholder_text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bytes" type="SpinBox" parent="Section"]
margin_left = 260.0
margin_top = 134.0
margin_right = 490.0
margin_bottom = 164.0
max_value = 10000.0
prefix = "reserve"
suffix = "bytes"

[node name="AddFn" type="Button" parent="Section"]
margin_left = 358.0
margin_top = 176.0
margin_right = 490.0
margin_bottom = 202.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Add Function"

[connection signal="text_changed" from="DocumentationBrowser/Search" to="." method="OnSearch"]
[connection signal="pressed" from="Section/Ok" to="." method="OnAddSection"]
[connection signal="pressed" from="Section/AddFn" to="." method="OnAddFn"]
