extends Node2D

var size=null
var empty=preload("res://Scenes/Empty.tscn")
var path=""
var doc=[
"aaa :: ascii adjust al after addition",
"aad :: ascii adjust ax before division",
"aam :: ascii adjust ax after multiplication",
"aas :: ascii adjust al after subtraction",
"adc :: add with carry",
"add :: add",
"and :: logical and",
"call :: call procedure",
"cbw :: convert byte to word",
"clc :: clear carry flag",
"cld :: clear direction flag",
"cli :: clear interrupt flag",
"cmc :: complement carry flag",
"cmp :: compare operands",
"cmpsb :: compare bytes in memory",
"cmpsw :: compare words",
"cwd :: convert word to doubleword",
"daa :: decimal adjust al after addition",
"das :: decimal adjust al after subtraction",
"dec :: decrement by 1",
"div :: unsigned divide",
"esc :: used with floating-point unit",
"hlt :: enter halt state",
"idiv :: signed divide",
"imul :: signed multiply",
"in :: input from port",
"inc :: increment by 1",
"int :: call to interrupt",
"into :: call to interrupt if overflow",
"iret :: return from interrupt",
"jcc :: jump if condition",
"jcxz :: jump if cx is zero",
"jmp :: jump",
"lahf :: load flags into ah register",
"lds :: load pointer using ds",
"lea :: load effective address",
"les :: load es with pointer",
"lock :: assert bus lock# signal",
"lodsb :: load string byte",
"lodsw :: load string word",
"loop/loopx :: loop control",
"mov :: move",
"mul :: unsigned multiply",
"neg :: two's complement negation",
"nop :: no operation",
"not :: negate the operand, logical not",
"or :: logical or",
"out :: output to port",
"pop :: pop data from stack",
"popf :: pop flags register from stack",
"push :: push data onto stack",
"pushf :: push flags onto stack",
"rcl :: rotate left (with carry)",
"rcr :: rotate right (with carry)",
"repxx :: repeat movs/stos/cmps/lods/scas",
"ret :: return from procedure",
"retn :: return from near procedure",
"retf :: return from far procedure",
"rol :: rotate left",
"ror :: rotate right",
"sahf :: store ah into flags",
"sal :: shift arithmetically left (signed shift left)",
"sar :: shift arithmetically right (signed shift right)",
"sbb :: subtraction with borrow",
"scasb :: compare byte string",
"scasw :: compare word string",
"shl :: shift left (unsigned shift left)",
"shr :: shift right (unsigned shift right)",
"stc :: set carry flag",
"std :: set direction flag",
"sti :: set interrupt flag",
"stosb :: store byte in string",
"stosw :: store word in string",
"sub :: subtraction",
"test :: logical compare (and)",
"wait :: wait until not busy",
"xchg :: exchange data",
"xlat :: table look-up translation",
"xor :: exclusive or",
"bound :: check array index against bounds",
"enter :: enter stack frame",
"ins :: input from port to string",
"leave :: leave stack frame",
"outs :: output string to port",
"arpl :: adjust rpl field of selector",
"clts :: clear task-switched flag in register cr0",
"lar :: load access rights byte",
"lgdt :: load global descriptor table",
"lidt :: load interrupt descriptor table",
"lldt :: load local descriptor table",
"lmsw :: load machine status word",
"loadall :: load all cpu registers, including internal ones such as gdt",
"lsl :: load segment limit",
"ltr :: load task register",
"sgdt :: store global descriptor table",
"sidt :: store interrupt descriptor table",
"sldt :: store local descriptor table",
"smsw :: store machine status word",
"str :: store task register",
"verr :: verify a segment for reading",
"verw :: verify a segment for writing",
"bsf :: bit scan forward",
"bsr :: bit scan reverse",
"bt :: bit test",
"btc :: bit test and complement",
"btr :: bit test and reset",
"bts :: bit test and set",
"cdq :: convert double-word to quad-word",
"cmpsd :: compare string double-word",
"cwde :: convert word to double-word",
"ibts :: insert bit string",
"insd :: input from port to string double-word",
"iretx :: interrupt return; d suffix means 32-bit return, f suffix means do not generate epilogue code (i.e. leave instruction)",
"jecxz :: jump if ecx is zero",
"lfs, lgs :: load far pointer",
"lss :: load stack segment",
"lodsd :: load string double-word",
"loopw :: loop, conditional loop",
"loopd :: loop while equal",
"movsx :: move with sign-extension",
"movzx :: move with zero-extension",
"outsd :: output to port from string double-word",
"popad :: pop all double-word (32-bit) registers from stack",
"popfd :: pop data into eflags register",
"pushad :: push all double-word (32-bit) registers onto stack",
"pushfd :: push eflags register onto stack",
"scasd :: scan string data double-word",
"setcc :: set byte to one on condition, zero otherwise",
"shld :: shift left double-word",
"shrd :: shift right double-word",
"stosd :: store string double-word",
"xbts :: extract bit string",
"movb :: move byte",
"movw :: move word",
"movd :: move double word",
"movq :: move quad word",
"movzb :: move byte zero extend",
"movzw :: move word zero extend",
"movzd :: move double word zero extend",
"movzq :: move quad word zero extend",
"movsb :: move byte sign extend",
"movsw :: move word sign extend",
"movsd :: move double word sign extend",
"movsq :: move quad word sign extend",
"ja :: jump if above",
"jae :: jump if above or equal",
"jb :: jump if below",
"jbe :: jump if below or equal",
"jc :: jump if carry",
"je :: jump if equal",
"jg :: jump if greater (signed)",
"jge :: jump if greater or equal (signed)",
"jl :: jump if less (signed)",
"jle :: jump if less or equal (signed)",
"jna :: jump if not above",
"jnae :: jump if not above or equal",
"jnb :: jump if not below",
"jnbe :: jump if not below or equal",
"jnc :: jump if not carry",
"jne :: jump if not equal",
"jng :: jump if not greater (signed)",
"jnge :: jump if not greater or equal (signed)",
"jnl :: jump if not less (signed)",
"jnle :: jump if not less or equal (signed)",
"jno :: jump if not overflow (signed)",
"jnp :: jump if no parity",
"jns :: jump if not signed (signed)",
"jnz :: jump if not zero",
"jo :: jump if overflow (signed)",
"jp :: jump if parity",
"jpe :: jump if parity even",
"jpo :: jump if parity odd",
"js :: jump if signed (signed)",
"jz :: jump if zero",
"syscall :: call syscall (UNIX)",
"windows64 :: argument order rcx, rdx, r8, and r9",
"unix64 (Mac,BSD,Linux):: argument order rdi, rsi, rdx, rcx, r8, and r9",
"sys64_read :: 0",
"sys64_write :: 1",
"sys64_open :: 2",
"sys64_close :: 3",
"sys64_stat :: 4",
"sys64_fstat :: 5",
"sys64_lstat :: 6",
"sys64_poll :: 7",
"sys64_lseek :: 8",
"sys64_mmap :: 9",
"sys64_mprotect :: 10",
"sys64_munmap :: 11",
"sys64_brk :: 12",
"sys64_rt_sigaction :: 13",
"sys64_rt_sigprocmask :: 14",
"sys64_rt_sigreturn :: 15",
"sys64_ioctl :: 16",
"sys64_pread64 :: 17",
"sys64_pwrite64 :: 18",
"sys64_readv :: 19",
"sys64_writev :: 20",
"sys64_access :: 21",
"sys64_pipe :: 22",
"sys64_select :: 23",
"sys64_sched_yield :: 24",
"sys64_mremap :: 25",
"sys64_msync :: 26",
"sys64_mincore :: 27",
"sys64_madvise :: 28",
"sys64_shmget :: 29",
"sys64_shmat :: 30",
"sys64_shmctl :: 31",
"sys64_dup :: 32",
"sys64_dup2 :: 33",
"sys64_pause :: 34",
"sys64_nanosleep :: 35",
"sys64_getitimer :: 36",
"sys64_alarm :: 37",
"sys64_setitimer :: 38",
"sys64_getpid :: 39",
"sys64_sendfile :: 40",
"sys64_socket :: 41",
"sys64_connect :: 42",
"sys64_accept :: 43",
"sys64_sendto :: 44",
"sys64_recvfrom :: 45",
"sys64_sendmsg :: 46",
"sys64_recvmsg :: 47",
"sys64_shutdown :: 48",
"sys64_bind :: 49",
"sys64_listen :: 50",
"sys64_getsockname :: 51",
"sys64_getpeername :: 52",
"sys64_socketpair :: 53",
"sys64_setsockopt :: 54",
"sys64_getsockopt :: 55",
"sys64_clone :: 56",
"sys64_fork :: 57",
"sys64_vfork :: 58",
"sys64_execve :: 59",
"sys64_exit :: 60",
"sys64_wait4 :: 61",
"sys64_kill :: 62",
"sys64_uname :: 63",
"sys64_semget :: 64",
"sys64_semop :: 65",
"sys64_semctl :: 66",
"sys64_shmdt :: 67",
"sys64_msgget :: 68",
"sys64_msgsnd :: 69",
"sys64_msgrcv :: 70",
"sys64_msgctl :: 71",
"sys64_fcntl :: 72",
"sys64_flock :: 73",
"sys64_fsync :: 74",
"sys64_fdatasync :: 75",
"sys64_truncate :: 76",
"sys64_ftruncate :: 77",
"sys64_getdents :: 78",
"sys64_getcwd :: 79",
"sys64_chdir :: 80",
"sys64_fchdir :: 81",
"sys64_rename :: 82",
"sys64_mkdir :: 83",
"sys64_rmdir :: 84",
"sys64_creat :: 85",
"sys64_link :: 86",
"sys64_unlink :: 87",
"sys64_symlink :: 88",
"sys64_readlink :: 89",
"sys64_chmod :: 90",
"sys64_fchmod :: 91",
"sys64_chown :: 92",
"sys64_fchown :: 93",
"sys64_lchown :: 94",
"sys64_umask :: 95",
"sys64_gettimeofday :: 96",
"sys64_getrlimit :: 97",
"sys64_getrusage :: 98",
"sys64_sysinfo :: 99",
"sys64_times :: 100",
"sys64_ptrace :: 101",
"sys64_getuid :: 102",
"sys64_syslog :: 103",
"sys64_getgid :: 104",
"sys64_setuid :: 105",
"sys64_setgid :: 106",
"sys64_geteuid :: 107",
"sys64_getegid :: 108",
"sys64_setpgid :: 109",
"sys64_getppid :: 110",
"sys64_getpgrp :: 111",
"sys64_setsid :: 112",
"sys64_setreuid :: 113",
"sys64_setregid :: 114",
"sys64_getgroups :: 115",
"sys64_setgroups :: 116",
"sys64_setresuid :: 117",
"sys64_getresuid :: 118",
"sys64_setresgid :: 119",
"sys64_getresgid :: 120",
"sys64_getpgid :: 121",
"sys64_setfsuid :: 122",
"sys64_setfsgid :: 123",
"sys64_getsid :: 124",
"sys64_capget :: 125",
"sys64_capset :: 126",
"sys64_rt_sigpending :: 127",
"sys64_rt_sigtimedwait :: 128",
"sys64_rt_sigqueueinfo :: 129",
"sys64_rt_sigsuspend :: 130",
"sys64_sigaltstack :: 131",
"sys64_utime :: 132",
"sys64_mknod :: 133",
"sys64_uselib :: 134",
"sys64_personality :: 135",
"sys64_ustat :: 136",
"sys64_statfs :: 137",
"sys64_fstatfs :: 138",
"sys64_sysfs :: 139",
"sys64_getpriority :: 140",
"sys64_setpriority :: 141",
"sys64_sched_setparam :: 142",
"sys64_sched_getparam :: 143",
"sys64_sched_setscheduler :: 144",
"sys64_sched_getscheduler :: 145",
"sys64_sched_get_priority_max :: 146",
"sys64_sched_get_priority_min :: 147",
"sys64_sched_rr_get_interval :: 148",
"sys64_mlock :: 149",
"sys64_munlock :: 150",
"sys64_mlockall :: 151",
"sys64_munlockall :: 152",
"sys64_vhangup :: 153",
"sys64_modify_ldt :: 154",
"sys64_pivot_root :: 155",
"sys64__sysctl :: 156",
"sys64_prctl :: 157",
"sys64_arch_prctl :: 158",
"sys64_adjtimex :: 159",
"sys64_setrlimit :: 160",
"sys64_chroot :: 161",
"sys64_sync :: 162",
"sys64_acct :: 163",
"sys64_settimeofday :: 164",
"sys64_mount :: 165",
"sys64_umount2 :: 166",
"sys64_swapon :: 167",
"sys64_swapoff :: 168",
"sys64_reboot :: 169",
"sys64_sethostname :: 170",
"sys64_setdomainname :: 171",
"sys64_iopl :: 172",
"sys64_ioperm :: 173",
"sys64_create_module :: 174",
"sys64_init_module :: 175",
"sys64_delete_module :: 176",
"sys64_get_kernel_syms :: 177",
"sys64_query_module :: 178",
"sys64_quotactl :: 179",
"sys64_nfsservctl :: 180",
"sys64_getpmsg :: 181",
"sys64_putpmsg :: 182",
"sys64_afs_syscall :: 183",
"sys64_tuxcall :: 184",
"sys64_security :: 185",
"sys64_gettid :: 186",
"sys64_readahead :: 187",
"sys64_setxattr :: 188",
"sys64_lsetxattr :: 189",
"sys64_fsetxattr :: 190",
"sys64_getxattr :: 191",
"sys64_lgetxattr :: 192",
"sys64_fgetxattr :: 193",
"sys64_listxattr :: 194",
"sys64_llistxattr :: 195",
"sys64_flistxattr :: 196",
"sys64_removexattr :: 197",
"sys64_lremovexattr :: 198",
"sys64_fremovexattr :: 199",
"sys64_tkill :: 200",
"sys64_time :: 201",
"sys64_futex :: 202",
"sys64_sched_setaffinity :: 203",
"sys64_sched_getaffinity :: 204",
"sys64_set_thread_area :: 205",
"sys64_io_setup :: 206",
"sys64_io_destroy :: 207",
"sys64_io_getevents :: 208",
"sys64_io_submit :: 209",
"sys64_io_cancel :: 210",
"sys64_get_thread_area :: 211",
"sys64_lookup_dcookie :: 212",
"sys64_epoll_create :: 213",
"sys64_epoll_ctl_old :: 214",
"sys64_epoll_wait_old :: 215",
"sys64_remap_file_pages :: 216",
"sys64_getdents64 :: 217",
"sys64_set_tid_address :: 218",
"sys64_restart_syscall :: 219",
"sys64_semtimedop :: 220",
"sys64_fadvise64 :: 221",
"sys64_timer_create :: 222",
"sys64_timer_settime :: 223",
"sys64_timer_gettime :: 224",
"sys64_timer_getoverrun :: 225",
"sys64_timer_delete :: 226",
"sys64_clock_settime :: 227",
"sys64_clock_gettime :: 228",
"sys64_clock_getres :: 229",
"sys64_clock_nanosleep :: 230",
"sys64_exit_group :: 231",
"sys64_epoll_wait :: 232",
"sys64_epoll_ctl :: 233",
"sys64_tgkill :: 234",
"sys64_utimes :: 235",
"sys64_vserver :: 236",
"sys64_mbind :: 237",
"sys64_set_mempolicy :: 238",
"sys64_get_mempolicy :: 239",
"sys64_mq_open :: 240",
"sys64_mq_unlink :: 241",
"sys64_mq_timedsend :: 242",
"sys64_mq_timedreceive :: 243",
"sys64_mq_notify :: 244",
"sys64_mq_getsetattr :: 245",
"sys64_kexec_load :: 246",
"sys64_waitid :: 247",
"sys64_add_key :: 248",
"sys64_request_key :: 249",
"sys64_keyctl :: 250",
"sys64_ioprio_set :: 251",
"sys64_ioprio_get :: 252",
"sys64_inotify_init :: 253",
"sys64_inotify_add_watch :: 254",
"sys64_inotify_rm_watch :: 255",
"sys64_migrate_pages :: 256",
"sys64_openat :: 257",
"sys64_mkdirat :: 258",
"sys64_mknodat :: 259",
"sys64_fchownat :: 260",
"sys64_futimesat :: 261",
"sys64_newfstatat :: 262",
"sys64_unlinkat :: 263",
"sys64_renameat :: 264",
"sys64_linkat :: 265",
"sys64_symlinkat :: 266",
"sys64_readlinkat :: 267",
"sys64_fchmodat :: 268",
"sys64_faccessat :: 269",
"sys64_pselect6 :: 270",
"sys64_ppoll :: 271",
"sys64_unshare :: 272",
"sys64_set_robust_list :: 273",
"sys64_get_robust_list :: 274",
"sys64_splice :: 275",
"sys64_tee :: 276",
"sys64_sync_file_range :: 277",
"sys64_vmsplice :: 278",
"sys64_move_pages :: 279",
"sys64_utimensat :: 280",
"sys64_epoll_pwait :: 281",
"sys64_signalfd :: 282",
"sys64_timerfd_create :: 283",
"sys64_eventfd :: 284",
"sys64_fallocate :: 285",
"sys64_timerfd_settime :: 286",
"sys64_timerfd_gettime :: 287",
"sys64_accept4 :: 288",
"sys64_signalfd4 :: 289",
"sys64_eventfd2 :: 290",
"sys64_epoll_create1 :: 291",
"sys64_dup3 :: 292",
"sys64_pipe2 :: 293",
"sys64_inotify_init1 :: 294",
"sys64_preadv :: 295",
"sys64_pwritev :: 296",
"sys64_rt_tgsigqueueinfo :: 297",
"sys64_perf_event_open :: 298",
"sys64_recvmmsg :: 299",
"sys64_fanotify_init :: 300",
"sys64_fanotify_mark :: 301",
"sys64_prlimit64 :: 302",
"sys64_name_to_handle_at :: 303",
"sys64_open_by_handle_at :: 304",
"sys64_clock_adjtime :: 305",
"sys64_syncfs :: 306",
"sys64_sendmmsg :: 307",
"sys64_setns :: 308",
"sys64_getcpu :: 309",
"sys64_process_vm_readv :: 310",
"sys64_process_vm_writev :: 311",
"sys64_kcmp :: 312",
"sys64_finit_module :: 313",
"sys64_sched_setattr :: 314",
"sys64_sched_getattr :: 315",
"sys64_renameat2 :: 316",
"sys64_seccomp :: 317",
"sys64_getrandom :: 318",
"sys64_memfd_create :: 319",
"sys64_kexec_file_load :: 320",
"sys64_bpf :: 321",
"sys64_execveat :: 322",
"sys64_userfaultfd :: 323",
"sys64_membarrier :: 324",
"sys64_mlock2 :: 325",
"sys64_copy_file_range :: 326",
"sys64_preadv2 :: 327",
"sys64_pwritev2 :: 328",
"sys64_pkey_mprotect :: 329",
"sys64_pkey_alloc :: 330",
"sys64_pkey_free :: 331",
"sys64_statx :: 332",
"sys64_io_pgetevents :: 333",
"sys64_rseq :: 334",
"sys64_pidfd_send_signal :: 424",
"sys64_io_uring_setup :: 425",
"sys64_io_uring_enter :: 426",
"sys64_io_uring_register :: 427",
"sys64_open_tree :: 428",
"sys64_move_mount :: 429",
"sys64_fsopen :: 430",
"sys64_fsconfig :: 431",
"sys64_fsmount :: 432",
"sys64_fspick :: 433",
"sys64_pidfd_open :: 434",
"sys64_clone3 :: 435",
"sys64_close_range :: 436",
"sys64_openat2 :: 437",
"sys64_pidfd_getfd :: 438",
"sys64_faccessat2 :: 439",
"sys64_process_madvise :: 440",
"sys32_restart_syscall :: 0",
"sys32_exit :: 1",
"sys32_fork :: 2",
"sys32_read :: 3",
"sys32_write :: 4",
"sys32_open :: 5",
"sys32_close :: 6",
"sys32_waitpid :: 7",
"sys32_creat :: 8",
"sys32_link :: 9",
"sys32_unlink :: 10",
"sys32_execve :: 11",
"sys32_chdir :: 12",
"sys32_time :: 13",
"sys32_mknod :: 14",
"sys32_chmod :: 15",
"sys32_lchown :: 16",
"sys32_break :: 17",
"sys32_oldstat :: 18",
"sys32_lseek :: 19",
"sys32_getpid :: 20",
"sys32_mount :: 21",
"sys32_umount :: 22",
"sys32_setuid :: 23",
"sys32_getuid :: 24",
"sys32_stime :: 25",
"sys32_ptrace :: 26",
"sys32_alarm :: 27",
"sys32_oldfstat :: 28",
"sys32_pause :: 29",
"sys32_utime :: 30",
"sys32_stty :: 31",
"sys32_gtty :: 32",
"sys32_access :: 33",
"sys32_nice :: 34",
"sys32_ftime :: 35",
"sys32_sync :: 36",
"sys32_kill :: 37",
"sys32_rename :: 38",
"sys32_mkdir :: 39",
"sys32_rmdir :: 40",
"sys32_dup :: 41",
"sys32_pipe :: 42",
"sys32_times :: 43",
"sys32_prof :: 44",
"sys32_brk :: 45",
"sys32_setgid :: 46",
"sys32_getgid :: 47",
"sys32_signal :: 48",
"sys32_geteuid :: 49",
"sys32_getegid :: 50",
"sys32_acct :: 51",
"sys32_umount2 :: 52",
"sys32_lock :: 53",
"sys32_ioctl :: 54",
"sys32_fcntl :: 55",
"sys32_mpx :: 56",
"sys32_setpgid :: 57",
"sys32_ulimit :: 58",
"sys32_oldolduname :: 59",
"sys32_umask :: 60",
"sys32_chroot :: 61",
"sys32_ustat :: 62",
"sys32_dup2 :: 63",
"sys32_getppid :: 64",
"sys32_getpgrp :: 65",
"sys32_setsid :: 66",
"sys32_sigaction :: 67",
"sys32_sgetmask :: 68",
"sys32_ssetmask :: 69",
"sys32_setreuid :: 70",
"sys32_setregid :: 71",
"sys32_sigsuspend :: 72",
"sys32_sigpending :: 73",
"sys32_sethostname :: 74",
"sys32_setrlimit :: 75",
"sys32_getrlimit :: 76",
"sys32_getrusage :: 77",
"sys32_gettimeofday :: 78",
"sys32_settimeofday :: 79",
"sys32_getgroups :: 80",
"sys32_setgroups :: 81",
"sys32_select :: 82",
"sys32_symlink :: 83",
"sys32_oldlstat :: 84",
"sys32_readlink :: 85",
"sys32_uselib :: 86",
"sys32_swapon :: 87",
"sys32_reboot :: 88",
"sys32_readdir :: 89",
"sys32_mmap :: 90",
"sys32_munmap :: 91",
"sys32_truncate :: 92",
"sys32_ftruncate :: 93",
"sys32_fchmod :: 94",
"sys32_fchown :: 95",
"sys32_getpriority :: 96",
"sys32_setpriority :: 97",
"sys32_profil :: 98",
"sys32_statfs :: 99",
"sys32_fstatfs :: 100",
"sys32_ioperm :: 101",
"sys32_socketcall :: 102",
"sys32_syslog :: 103",
"sys32_setitimer :: 104",
"sys32_getitimer :: 105",
"sys32_stat :: 106",
"sys32_lstat :: 107",
"sys32_fstat :: 108",
"sys32_olduname :: 109",
"sys32_iopl :: 110",
"sys32_vhangup :: 111",
"sys32_idle :: 112",
"sys32_vm86old :: 113",
"sys32_wait4 :: 114",
"sys32_swapoff :: 115",
"sys32_sysinfo :: 116",
"sys32_ipc :: 117",
"sys32_fsync :: 118",
"sys32_sigreturn :: 119",
"sys32_clone :: 120",
"sys32_setdomainname :: 121",
"sys32_uname :: 122",
"sys32_modify_ldt :: 123",
"sys32_adjtimex :: 124",
"sys32_mprotect :: 125",
"sys32_sigprocmask :: 126",
"sys32_create_module :: 127",
"sys32_init_module :: 128",
"sys32_delete_module :: 129",
"sys32_get_kernel_syms :: 130",
"sys32_quotactl :: 131",
"sys32_getpgid :: 132",
"sys32_fchdir :: 133",
"sys32_bdflush :: 134",
"sys32_sysfs :: 135",
"sys32_personality :: 136",
"sys32_afs_syscall :: 137",
"sys32_setfsuid :: 138",
"sys32_setfsgid :: 139",
"sys32__llseek :: 140",
"sys32_getdents :: 141",
"sys32__newselect :: 142",
"sys32_flock :: 143",
"sys32_msync :: 144",
"sys32_readv :: 145",
"sys32_writev :: 146",
"sys32_getsid :: 147",
"sys32_fdatasync :: 148",
"sys32__sysctl :: 149",
"sys32_mlock :: 150",
"sys32_munlock :: 151",
"sys32_mlockall :: 152",
"sys32_munlockall :: 153",
"sys32_sched_setparam :: 154",
"sys32_sched_getparam :: 155",
"sys32_sched_setscheduler :: 156",
"sys32_sched_getscheduler :: 157",
"sys32_sched_yield :: 158",
"sys32_sched_get_priority_max :: 159",
"sys32_sched_get_priority_min :: 160",
"sys32_sched_rr_get_interval :: 161",
"sys32_nanosleep :: 162",
"sys32_mremap :: 163",
"sys32_setresuid :: 164",
"sys32_getresuid :: 165",
"sys32_vm86 :: 166",
"sys32_query_module :: 167",
"sys32_poll :: 168",
"sys32_nfsservctl :: 169",
"sys32_setresgid :: 170",
"sys32_getresgid :: 171",
"sys32_prctl :: 172",
"sys32_rt_sigreturn :: 173",
"sys32_rt_sigaction :: 174",
"sys32_rt_sigprocmask :: 175",
"sys32_rt_sigpending :: 176",
"sys32_rt_sigtimedwait :: 177",
"sys32_rt_sigqueueinfo :: 178",
"sys32_rt_sigsuspend :: 179",
"sys32_pread64 :: 180",
"sys32_pwrite64 :: 181",
"sys32_chown :: 182",
"sys32_getcwd :: 183",
"sys32_capget :: 184",
"sys32_capset :: 185",
"sys32_sigaltstack :: 186",
"sys32_sendfile :: 187",
"sys32_getpmsg :: 188",
"sys32_putpmsg :: 189",
"sys32_vfork :: 190",
"sys32_ugetrlimit :: 191",
"sys32_mmap2 :: 192",
"sys32_truncate64 :: 193",
"sys32_ftruncate64 :: 194",
"sys32_stat64 :: 195",
"sys32_lstat64 :: 196",
"sys32_fstat64 :: 197",
"sys32_lchown32 :: 198",
"sys32_getuid32 :: 199",
"sys32_getgid32 :: 200",
"sys32_geteuid32 :: 201",
"sys32_getegid32 :: 202",
"sys32_setreuid32 :: 203",
"sys32_setregid32 :: 204",
"sys32_getgroups32 :: 205",
"sys32_setgroups32 :: 206",
"sys32_fchown32 :: 207",
"sys32_setresuid32 :: 208",
"sys32_getresuid32 :: 209",
"sys32_setresgid32 :: 210",
"sys32_getresgid32 :: 211",
"sys32_chown32 :: 212",
"sys32_setuid32 :: 213",
"sys32_setgid32 :: 214",
"sys32_setfsuid32 :: 215",
"sys32_setfsgid32 :: 216",
"sys32_pivot_root :: 217",
"sys32_mincore :: 218",
"sys32_madvise :: 219",
"sys32_getdents64 :: 220",
"sys32_fcntl64 :: 221",
"sys32_gettid :: 224",
"sys32_readahead :: 225",
"sys32_setxattr :: 226",
"sys32_lsetxattr :: 227",
"sys32_fsetxattr :: 228",
"sys32_getxattr :: 229",
"sys32_lgetxattr :: 230",
"sys32_fgetxattr :: 231",
"sys32_listxattr :: 232",
"sys32_llistxattr :: 233",
"sys32_flistxattr :: 234",
"sys32_removexattr :: 235",
"sys32_lremovexattr :: 236",
"sys32_fremovexattr :: 237",
"sys32_tkill :: 238",
"sys32_sendfile64 :: 239",
"sys32_futex :: 240",
"sys32_sched_setaffinity :: 241",
"sys32_sched_getaffinity :: 242",
"sys32_set_thread_area :: 243",
"sys32_get_thread_area :: 244",
"sys32_io_setup :: 245",
"sys32_io_destroy :: 246",
"sys32_io_getevents :: 247",
"sys32_io_submit :: 248",
"sys32_io_cancel :: 249",
"sys32_fadvise64 :: 250",
"sys32_exit_group :: 252",
"sys32_lookup_dcookie :: 253",
"sys32_epoll_create :: 254",
"sys32_epoll_ctl :: 255",
"sys32_epoll_wait :: 256",
"sys32_remap_file_pages :: 257",
"sys32_set_tid_address :: 258",
"sys32_timer_create :: 259",
"sys32_timer_settime :: 260",
"sys32_timer_gettime :: 261",
"sys32_timer_getoverrun :: 262",
"sys32_timer_delete :: 263",
"sys32_clock_settime :: 264",
"sys32_clock_gettime :: 265",
"sys32_clock_getres :: 266",
"sys32_clock_nanosleep :: 267",
"sys32_statfs64 :: 268",
"sys32_fstatfs64 :: 269",
"sys32_tgkill :: 270",
"sys32_utimes :: 271",
"sys32_fadvise64_64 :: 272",
"sys32_vserver :: 273",
"sys32_mbind :: 274",
"sys32_get_mempolicy :: 275",
"sys32_set_mempolicy :: 276",
"sys32_mq_open :: 277",
"sys32_mq_unlink :: 278",
"sys32_mq_timedsend :: 279",
"sys32_mq_timedreceive :: 280",
"sys32_mq_notify :: 281",
"sys32_mq_getsetattr :: 282",
"sys32_kexec_load :: 283",
"sys32_waitid :: 284",
"sys32_add_key :: 286",
"sys32_request_key :: 287",
"sys32_keyctl :: 288",
"sys32_ioprio_set :: 289",
"sys32_ioprio_get :: 290",
"sys32_inotify_init :: 291",
"sys32_inotify_add_watch :: 292",
"sys32_inotify_rm_watch :: 293",
"sys32_migrate_pages :: 294",
"sys32_openat :: 295",
"sys32_mkdirat :: 296",
"sys32_mknodat :: 297",
"sys32_fchownat :: 298",
"sys32_futimesat :: 299",
"sys32_fstatat64 :: 300",
"sys32_unlinkat :: 301",
"sys32_renameat :: 302",
"sys32_linkat :: 303",
"sys32_symlinkat :: 304",
"sys32_readlinkat :: 305",
"sys32_fchmodat :: 306",
"sys32_faccessat :: 307",
"sys32_pselect6 :: 308",
"sys32_ppoll :: 309",
"sys32_unshare :: 310",
"sys32_set_robust_list :: 311",
"sys32_get_robust_list :: 312",
"sys32_splice :: 313",
"sys32_sync_file_range :: 314",
"sys32_tee :: 315",
"sys32_vmsplice :: 316",
"sys32_move_pages :: 317",
"sys32_getcpu :: 318",
"sys32_epoll_pwait :: 319",
"sys32_utimensat :: 320",
"sys32_signalfd :: 321",
"sys32_timerfd_create :: 322",
"sys32_eventfd :: 323",
"sys32_fallocate :: 324",
"sys32_timerfd_settime :: 325",
"sys32_timerfd_gettime :: 326",
"sys32_signalfd4 :: 327",
"sys32_eventfd2 :: 328",
"sys32_epoll_create1 :: 329",
"sys32_dup3 :: 330",
"sys32_pipe2 :: 331",
"sys32_inotify_init1 :: 332",
"sys32_preadv :: 333",
"sys32_pwritev :: 334",
"sys32_rt_tgsigqueueinfo :: 335",
"sys32_perf_event_open :: 336",
"sys32_recvmmsg :: 337",
"sys32_fanotify_init :: 338",
"sys32_fanotify_mark :: 339",
"sys32_prlimit64 :: 340",
"sys32_name_to_handle_at :: 341",
"sys32_open_by_handle_at :: 342",
"sys32_clock_adjtime :: 343",
"sys32_syncfs :: 344",
"sys32_sendmmsg :: 345",
"sys32_setns :: 346",
"sys32_process_vm_readv :: 347",
"sys32_process_vm_writev :: 348",
"sys32_kcmp :: 349",
"sys32_finit_module :: 350",
"sys32_sched_setattr :: 351",
"sys32_sched_getattr :: 352",
"sys32_renameat2 :: 353",
"sys32_seccomp :: 354",
"sys32_getrandom :: 355",
"sys32_memfd_create :: 356",
"sys32_bpf :: 357",
"sys32_execveat :: 358",
"sys32_socket :: 359",
"sys32_socketpair :: 360",
"sys32_bind :: 361",
"sys32_connect :: 362",
"sys32_listen :: 363",
"sys32_accept4 :: 364",
"sys32_getsockopt :: 365",
"sys32_setsockopt :: 366",
"sys32_getsockname :: 367",
"sys32_getpeername :: 368",
"sys32_sendto :: 369",
"sys32_sendmsg :: 370",
"sys32_recvfrom :: 371",
"sys32_recvmsg :: 372",
"sys32_shutdown :: 373",
"sys32_userfaultfd :: 374",
"sys32_membarrier :: 375",
"sys32_mlock2 :: 376",
"sys32_copy_file_range :: 377",
"sys32_preadv2 :: 378",
"sys32_pwritev2 :: 379",
"sys32_pkey_mprotect :: 380",
"sys32_pkey_alloc :: 381",
"sys32_pkey_free :: 382",
"sys32_statx :: 383",
"sys32_arch_prctl :: 384",
"sys32_io_pgetevents :: 385",
"sys32_rseq :: 386",
"sys32_semget :: 393",
"sys32_semctl :: 394",
"sys32_shmget :: 395",
"sys32_shmctl :: 396",
"sys32_shmat :: 397",
"sys32_shmdt :: 398",
"sys32_msgget :: 399",
"sys32_msgsnd :: 400",
"sys32_msgrcv :: 401",
"sys32_msgctl :: 402",
"sys32_clock_gettime64 :: 403",
"sys32_clock_settime64 :: 404",
"sys32_clock_adjtime64 :: 405",
"sys32_clock_getres_time64 :: 406",
"sys32_clock_nanosleep_time64 :: 407",
"sys32_timer_gettime64 :: 408",
"sys32_timer_settime64 :: 409",
"sys32_timerfd_gettime64 :: 410",
"sys32_timerfd_settime64 :: 411",
"sys32_utimensat_time64 :: 412",
"sys32_pselect6_time64 :: 413",
"sys32_ppoll_time64 :: 414",
"sys32_io_pgetevents_time64 :: 416",
"sys32_recvmmsg_time64 :: 417",
"sys32_mq_timedsend_time64 :: 418",
"sys32_mq_timedreceive_time64 :: 419",
"sys32_semtimedop_time64 :: 420",
"sys32_rt_sigtimedwait_time64 :: 421",
"sys32_futex_time64 :: 422",
"sys32_sched_rr_get_interval_time64 :: 423",
"sys32_pidfd_send_signal :: 424",
"sys32_io_uring_setup :: 425",
"sys32_io_uring_enter :: 426",
"sys32_io_uring_register :: 427",
"sys32_open_tree :: 428",
"sys32_move_mount :: 429",
"sys32_fsopen :: 430",
"sys32_fsconfig :: 431",
"sys32_fsmount :: 432",
"sys32_fspick :: 433",
"sys32_pidfd_open :: 434",
"sys32_clone3 :: 435",
"sys32_close_range :: 436",
"sys32_openat2 :: 437",
"sys32_pidfd_getfd :: 438",
"sys32_faccessat2 :: 439",
"sys32_process_madvise :: 440"
]

func _ready():
	get_tree().root.connect("size_changed",self,"OnResize")
	get_tree().quit(-1) # should not be there

func _input(event):
	if event.is_action_pressed("New"):
		$Tabs.add_child(empty.instance())
	elif event.is_action_pressed("CloseTab"):
		$Tabs.remove_child($Tabs.get_child($Tabs.current_tab))
	elif event.is_action_pressed("Doc"):
		$DocumentationBrowser.popup()
	elif event.is_action_pressed("AddSection"):
		$Section.popup()
	elif event.is_action_pressed("FullScreen"):
		OS.window_fullscreen=!OS.window_fullscreen
	elif event.is_action_pressed("StayOnTop"):
		OS.set_window_always_on_top(!OS.is_window_always_on_top())
func OnResize():
	size=OS.window_size
	$Background.rect_size=size
	$Tabs.rect_size.x=size.x
	$Tabs.rect_size.y=size.y-20

func OnSearch(new_text):
	$DocumentationBrowser/List.clear()
	if new_text=="":
		for each in doc:
			$DocumentationBrowser/List.add_item(each)
	else:
		for each in doc:
			if new_text in each:
				$DocumentationBrowser/List.add_item(each)


func OnAddSection():
	var string='.section "'+$Section/Name.text+'","r'
	if $Section/Write.pressed:
		string+="w"
	if $Section/Execute.pressed:
		string+="x"
	if $Section/Exclude.pressed:
		string+="e"
	string+='"\n'
	$Tabs.get_child($Tabs.current_tab).get_node("Editor").insert_text_at_cursor(string)


func OnAddFn():
	var string=$Section/FnName.text+":\npush ebp\nmov ebp,esp\n"
	if $Section/Bytes.value==0:
		pass
	else:
		string+="sub esp,"+str($Section/Bytes.value)+"\n"
		string+="add esp,"+str($Section/Bytes.value)+"\n"
	string+="mov esp,ebp\npop ebp\nret"
	$Tabs.get_child($Tabs.current_tab).get_node("Editor").insert_text_at_cursor(string)
